@@ -1,29 +1,29 @@
 package zjc.streams.collectors.GroupingBy;
 
-import zjc.data.Department;
-import zjc.data.Employee;
+// https://howtodoinjava.com/java/stream/collectors-groupingby/
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.Map;
+import zjc.data.Rec;
+import static java.util.stream.Collectors.*;
 
 public class GroupingByClassifierSupplierCollector {
 
-    List<Employee> employees = List.of(
-            new Employee(1, "Alex", 30, new Department(1, "HR")),
-            new Employee(2, "Alex", 36, new Department(1, "HR")),
-            new Employee(3, "David", 30, new Department(1, "HR")),
-            new Employee(4, "Andrew", 30, new Department(2, "Finance")),
-            new Employee(5, "Edward", 31, new Department(2, "Finance")),
-            new Employee(6, "Nathan", 42, new Department(3, "ADMIN")),
-            new Employee(7, "Frank", 23, new Department(3, "ADMIN")),
-            new Employee(8, "David", 30, new Department(1, "HR")));
 
-    java.util.List<String> strings = Arrays.asList("Zohne", "Redy", "Zohne", "Redy", "Stome");
+    List<Rec.Person> persons = List.of(
+            new Rec.Person(1, "Alex", 100d, new Rec.Department(1, "HR")),
+            new Rec.Person(2, "Brian", 200d, new Rec.Department(1, "HR")),
+            new Rec.Person(3, "Charles", 900d, new Rec.Department(2, "Finance")),
+            new Rec.Person(4, "David", 200d, new Rec.Department(2, "Finance")),
+            new Rec.Person(5, "Edward", 200d, new Rec.Department(2, "Finance")),
+            new Rec.Person(6, "Frank", 800d, new Rec.Department(3, "ADMIN")),
+            new Rec.Person(7, "George", 900d, new Rec.Department(3, "ADMIN")));
 
-    // TODO
-    public void groupingByCountingFiltering() {
+    // Filtering all persons with salary less than 300
+    public void groupingWithFiltering() {
+        Map<Rec.Department, Long> map = persons.stream()
+                .collect(groupingBy(Rec.Person::department, filtering(p -> p.salary() > 300d, counting())));
 
+        System.out.println(map);
     }
 }
